--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+body{
+  margin-top: 0px;
+}
 #main{
   background-color: white;
   width:100%;
-  /*height:100%;*/
-  height:500px;
+  height:100vh;
   overflow: hidden;
 }
