--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
 body{
+  background-color: black;
   margin-top: 0px;
 }
+#reset{
+  display: inline-block;
+  width:20%;
+  height: 20px;
+  margin-left: 40%;
+  margin-top: 0px;
+  margin-bottom: 50px;
+}
+p{
+  background-color: blue;
+  width: 100%;
+  font-size: 1.5em;
+  color: white;
+  text-align: center;
+  margin-bottom: 30px;
+}
 #main{
-  background-color: white;
+  margin-top: 10px;
+  background-color: black;
   width:100%;
   height:100vh;
-  overflow: hidden;
+}
+p:hover{
+  cursor: pointer;
 }
